--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       Submitted Successfully!
     </div>
   </section>
-  <!-- <section id="skills">
+  <section id="skills">
     <div class="containder">
       <h1>Skills</h1>
       <div class="row">
@@ -147,7 +147,7 @@
         </div>
       </div>
     </div>
-  </section> -->
+  </section>
   
   <!--Javascript Begins Here-->
   <script src="https://kit.fontawesome.com/6d286a1171.js" crossorigin="anonymous"></script>
