--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
       <div class="container">
         <a class="navbar-brand ntext" href="#">Alphy Jose</a>
     
-          <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
-          </button> -->
+          </button>
     
-        <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#abtsec">About</a>
@@ -29,9 +29,9 @@
               <a class="nav-link" href="#">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Experiance</a>
+              <a class="nav-link" href="#">Contact Me</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#">Education</a>
             </li>
             <li class="nav-item">
@@ -39,9 +39,9 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact Me</a>
-            </li>
+            </li> -->
           </ul>
-        </div> -->
+        </div>
       </div>
     </nav>
   </header>
@@ -123,27 +123,23 @@
         <div class="col-md-6 hrdskl">
           <h2>Hard Skills</h2>
           <ul>
-            <ul>HTML</ul>
-            <ul>CSS</ul>
-            <ul>JavaScript</ul>
-            <ul>Data Sturctures</ul>
-            <ul>Python Programming</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-brands fa-html5"></i></span> HTML</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-brands fa-css3-alt"></i></span> CSS</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-brands fa-js"></i></span> JavaScript</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-database"></i></span> Data Sturctures</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-brands fa-python"></i></span> Python Programming</ul>
           </ul>
         </div>
         <div class="col-md-6 sftskl">
           <h2>Soft Skills</h2>
           <ul>
-            <ul>Problem Solving</ul>
-            <ul>Observation</ul>
-            <ul>Communication</ul>
-            <ul>Leadership</ul>
-            <ul>Adaptablity</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-calculator"></i></span> Problem Solving</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-eye"></i></span> Observation</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-people-group"></i></span> Communication</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-flag"></i></span> Leadership</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptablity</ul>
           </ul>
-          <br><br><br><br><b>rb
-            rb
-            rb
-            <br><br>
-          </b>
+          <br><br>
         </div>
       </div>
     </div>
