--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
               <a class="nav-link" href="#abtsec">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Skills</a>
+              <a class="nav-link" href="#skills">Skills</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
+              <a class="nav-link" href="#contact">Contact Me</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Education</a>
@@ -95,27 +95,6 @@
       </div>
     </div>
   </section>
-  <section data-aos="fade-up" data-aos-duration="10">    
-    <form action="" id="submit-form">
-        <div class="form-container">
-            <h1>Contact Me!</h1>
-            <i class="bx bx-user cui"><i class="cus"> Your Name:</i></i>
-            <input type="text" name="fname" class="input-field" placeholder="Your name..." required>
-            <i class="bx bxl-gmail cui"><i class="cus"> Enter Mail Id:</i></i>
-            <input type="email" name="mail" class="input-field" placeholder="Email Id..." required>
-            <i class="bx bx-envelope cui"><i class="cus"> Your Message:</i></i>
-            <textarea name="msg" id="" class="input-field" cols="30" rows="10" placeholder="Type here..." required></textarea>
-            <button type="submit">Submit</button>
-        </div>
-    </form>
-    <div id="loading-overlay" class="d-none">
-      <img src="images/30.gif" alt="Loading...">
-    </div>
-    
-    <div id="alert-popup" class="d-none alert alert-success" role="alert">
-      Submitted Successfully!
-    </div>
-  </section>
   <section id="skills">
     <div class="containder">
       <h1>Skills</h1>
@@ -142,6 +121,27 @@
           <br><br>
         </div>
       </div>
+    </div>
+  </section>
+  <section data-aos="fade-up" data-aos-duration="10" id="contact">    
+    <form action="" id="submit-form">
+        <div class="form-container">
+            <h1>Contact Me!</h1>
+            <i class="bx bx-user cui"><i class="cus"> Your Name:</i></i>
+            <input type="text" name="fname" class="input-field" placeholder="Your name..." required>
+            <i class="bx bxl-gmail cui"><i class="cus"> Enter Mail Id:</i></i>
+            <input type="email" name="mail" class="input-field" placeholder="Email Id..." required>
+            <i class="bx bx-envelope cui"><i class="cus"> Your Message:</i></i>
+            <textarea name="msg" id="" class="input-field" cols="30" rows="10" placeholder="Type here..." required></textarea>
+            <button type="submit">Submit</button>
+        </div>
+    </form>
+    <div id="loading-overlay" class="d-none">
+      <img src="images/30.gif" alt="Loading...">
+    </div>
+    
+    <div id="alert-popup" class="d-none alert alert-success" role="alert">
+      Submitted Successfully!
     </div>
   </section>
   
