--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alphy Jose</title>
-    <link rel="icon" href="Images/BGprofileVer.jpg">
+    <link rel="icon" href="Images/alphycircle.png">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -12,7 +13,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark bg-transparent py-4">
+    <nav class="navbar navbar-expand-md navbar-dark bg-transparent py-4" >
       <div class="container">
         <a class="navbar-brand ntext" href="#">Alphy Jose</a>
     
@@ -23,18 +24,18 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#abtsec">About</a>
+              <a class="nav-link" href="#abtsec_url">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#skills">Skills</a>
+              <a class="nav-link" href="#edu_url">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skills_url">Skills</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact Me</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Education</a>
-            </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
               <a class="nav-link" href="#">Achievements</a>
             </li>
             <li class="nav-item">
@@ -69,16 +70,17 @@
         </div>
       </div>
     </div>
-  </section>
+  </section><br><br>
+  <div id="abtsec_url"></div>
   <section id="abtsec" data-aos="fade-up" data-aos-duration="1000">
     <div class="container">
       <div class="row">
-        <div class="col-md-3">
-          <img src="images/Alphy.jpg" alt="" class="abtimg img-fluid">
+        <div class="col-md-2" style="text-align: center; margin-top: 1.5em;">
+          <img src="images/alphycircle.png" alt="" class="abtimg img-fluid">
         </div>
-        <div class="col-md-9">
+        <div class="col-md-10">
           <div class="abt">
-            <h1>About me...</h1>
+            <h2>About me...</h2>
             <p>I am an ambitious and proactive pre-final year B.tech student
               at Christ (Deemed To Be University) School of Engineering
               and Technology. Possessing a robust academic background
@@ -94,9 +96,40 @@
         </div>
       </div>
     </div>
-  </section>
-  <section id="skills">
+  </section><br><br>
+  <!-- abt ends here -->
+
+  <div id="edu_url"></div>
+  <section id="edu">
     <div class="containder">
+      <h1>Education</h1>
+      <div class="row">
+        <div class="col-6" id="edu-left">
+          <div class="edu-1">
+            <h4>High School</h4>
+            <h6>Holy Cross Higher Secondary School</h6>
+            <h6>Score: 97%</h6>
+          </div>
+          <div class="edu-3">
+            <h4>College</h4>
+            <h6>Christ (Deemed To Be University),Kengeri Campus</h6>
+            <h6>Aggregate: 59%</h6>
+          </div>
+        </div>
+        <div class="col-6" id="edu-right">
+          <div class="edu-2">
+            <h4>Higher Secondary</h4>
+          <h6>Holy Cross Higher Secondary School</h6>
+          <h6>Score: 92%</h6>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section><br><br>
+  <!-- edu ends here -->
+  <div id="skills_url"></div>
+  <section id="skills">
+    <div class="container">
       <h1>Skills</h1>
       <div class="row">
         <div class="col-md-6 hrdskl">
@@ -116,16 +149,16 @@
             <ul><span style="color: blueviolet;"><i class="fa-solid fa-eye"></i></span> Observation</ul>
             <ul><span style="color: blueviolet;"><i class="fa-solid fa-people-group"></i></span> Communication</ul>
             <ul><span style="color: blueviolet;"><i class="fa-solid fa-flag"></i></span> Leadership</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptablity</ul>
+            <ul><span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptability</ul>
           </ul>
           <br><br>
         </div>
       </div>
     </div>
   </section>
-  <section data-aos="fade-up" data-aos-duration="10" id="contact">    
+  <section id="contact">    
     <form action="" id="submit-form">
-        <div class="form-container">
+        <div class="form-container" data-aos="fade-up" data-aos-duration="10">
             <h1>Contact Me!</h1>
             <i class="bx bx-user cui"><i class="cus"> Your Name:</i></i>
             <input type="text" name="fname" class="input-field" placeholder="Your name..." required>
