Cert. & Achiv Added

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
               <a class="nav-link" href="#skills_url">Skills</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="#achiv_url">Achievements</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="#contact">Contact Me</a>
             </li>
             <!--<li class="nav-item">
-              <a class="nav-link" href="#">Achievements</a>
-            </li>
-            <li class="nav-item">
               <a class="nav-link" href="#">Contact Me</a>
             </li> -->
           </ul>
@@ -152,6 +152,45 @@
             <ul><span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptability</ul>
           </ul>
           <br><br>
+        </div>
+      </div>
+    </div>
+  </section><br>
+  <!-- skills ends here -->
+
+  <div id="achiv_url"></div>
+  <section id="achiv">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3" id="achiv-left">
+          <h2>Certifications & Achievements</h2>
+        </div>
+        <div class="col-md-9" id="achiv-right">
+          <ul>
+            <li>
+              Feb 2020 - Certification Black Belt 1st Dan (TBKA)
+            </li>
+            <li>
+              Nov 2022 - Certification in Cybersecurity (CISCO)
+            </li>
+            <li>
+              Jun 2023 - Certification in Data Science (IBM)
+            </li>
+            <li>
+              Aug 2023 - Domain Head(ACC, Christ University)
+            </li>
+            <li>
+              Aug 2023 - Club Head(ASCII, Christ University)
+            </li>
+            <li>
+              Feb 2024 - Webmaster(IEEE VTS, Christ University)
+            </li>
+            <li>
+              Jul 2024 - Certification for attending (Recorded) Webinar on
+              Artificial Intelligence and Health Care (Sanford University School
+              of Medicine)
+            </li>
+          </ul>
         </div>
       </div>
     </div>
