--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Alphy Jose">
+    <meta name="keywords" content="Portfolio, Alphy Jose, Christ University, resume, personal website,fullstack dev">
+    <meta name="description" content="Welcome to my personal portfolio! I'm Alphy Jose, a passionate Software Engineer dedicated to crafting immersive digital experiences. With a focus on web development, I blend creativity and technical expertise to bring ideas to life. Explore my portfolio...">
+
     <title>Alphy Jose</title>
     <link rel="icon" href="Images/alphycircle.png">
 
@@ -38,9 +42,6 @@
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contact Me</a>
             </li>
-            <!--<li class="nav-item">
-              <a class="nav-link" href="#">Contact Me</a>
-            </li> -->
           </ul>
         </div>
       </div>
@@ -53,18 +54,31 @@
         <source media="(min-width: 1024px)" srcset="images/BGprofile.jpg" type="image/jpeg">
         <img src="images/BGprofile.jpg" alt="Profile background image">  </picture>
       <div class="row w-100 position-absolute gx-0 py-0">
-        <div class="col-12 text-center welc" data-aos="fade-up" data-aos-duration="1000">
-          <h2>Alphy Jose</h2>
+        <div class="col-12 text-center welc">
+          <h2 data-aos="flip-left" data-aos-duration="3000">
+            Alphy Jose
+          </h2>
           <h1>Here!</h1>
-          <ul>
-            <a href="https://www.linkedin.com/in/alphyjose777/" >
-              <li><i class="fa-brands fa-linkedin"></i></li>
+          <ul data-aos="fade-up" data-aos-duration="3000">
+            <a href="https://www.linkedin.com/in/alphyjose777/">
+              <li>
+                <i class="fa-brands fa-linkedin"></i>
+              </li>
             </a>
             <a href="#" id="contact-link">
-              <li><i class="fa-solid fa-envelope"></i></li>
+              <li>
+                <i class="fa-solid fa-envelope"></i>
+              </li>
+            </a>
+            <a href="https://github.com/Alphy777">
+              <li>
+                <i class="fa-brands fa-github"></i>
+              </li>
             </a>
             <a href="https://www.instagram.com/_alp_hy_/">
-              <li><i class="fa-brands fa-square-instagram"></i></li>
+              <li>
+                <i class="fa-brands fa-square-instagram"></i>
+              </li>
             </a>
           </ul>
         </div>
@@ -102,22 +116,24 @@
   <div id="edu_url"></div>
   <section id="edu">
     <div class="containder">
-      <h1>Education</h1>
+      <h1 data-aos="fade-up" data-aos-duration="1000">
+        Education
+      </h1>
       <div class="row">
         <div class="col-6" id="edu-left">
-          <div class="edu-1">
+          <div class="edu-1" data-aos="fade-up" data-aos-duration="1000">
             <h4>High School</h4>
             <h6>Holy Cross Higher Secondary School</h6>
             <h6>Score: 97%</h6>
           </div>
-          <div class="edu-3">
+          <div class="edu-3" data-aos="fade-up" data-aos-duration="1000">
             <h4>College</h4>
             <h6>Christ (Deemed To Be University),Kengeri Campus</h6>
             <h6>Aggregate: 59%</h6>
           </div>
         </div>
         <div class="col-6" id="edu-right">
-          <div class="edu-2">
+          <div class="edu-2" data-aos="fade-up" data-aos-duration="1000">
             <h4>Higher Secondary</h4>
           <h6>Holy Cross Higher Secondary School</h6>
           <h6>Score: 92%</h6>
@@ -130,26 +146,52 @@
   <div id="skills_url"></div>
   <section id="skills">
     <div class="container">
-      <h1>Skills</h1>
+      <h1 data-aos="fade-up" data-aos-duration="1000">
+        Skills
+      </h1>
       <div class="row">
-        <div class="col-md-6 hrdskl">
-          <h2>Hard Skills</h2>
+        <div class="col-md-6 hrdskl" data-aos="fade-up" data-aos-duration="1000">
+          <h2 data-aos="flip-up" data-aos-duration="1000">
+            Hard Skills
+          </h2>
           <ul>
-            <ul><span style="color: blueviolet;"><i class="fa-brands fa-html5"></i></span> HTML</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-brands fa-css3-alt"></i></span> CSS</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-brands fa-js"></i></span> JavaScript</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-database"></i></span> Data Sturctures</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-brands fa-python"></i></span> Python Programming</ul>
+            <ul data-aos="fade-up-right" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-brands fa-html5"></i></span> HTML
+            </ul>
+            <ul data-aos="fade-up-right" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-brands fa-css3-alt"></i></span> CSS
+            </ul>
+            <ul data-aos="fade-up-right" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-brands fa-js"></i></span> JavaScript
+            </ul>
+            <ul data-aos="fade-up-right" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-solid fa-database"></i></span> Data Sturctures
+            </ul>
+            <ul data-aos="fade-up-right" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-brands fa-python"></i></span> Python Programming
+            </ul>
           </ul>
         </div>
-        <div class="col-md-6 sftskl">
-          <h2>Soft Skills</h2>
+        <div class="col-md-6 sftskl" data-aos="fade-up" data-aos-duration="1000">
+          <h2 data-aos="flip-up" data-aos-duration="1000">
+            Soft Skills
+          </h2>
           <ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-calculator"></i></span> Problem Solving</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-eye"></i></span> Observation</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-people-group"></i></span> Communication</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-flag"></i></span> Leadership</ul>
-            <ul><span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptability</ul>
+            <ul data-aos="fade-up-left" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-solid fa-calculator"></i></span> Problem Solving
+            </ul>
+            <ul data-aos="fade-up-left" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-solid fa-eye"></i></span> Observation
+            </ul>
+            <ul data-aos="fade-up-left" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-solid fa-people-group"></i></span> Communication
+            </ul>
+            <ul data-aos="fade-up-left" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-solid fa-flag"></i></span> Leadership
+            </ul>
+            <ul data-aos="fade-up-left" data-aos-duration="1000">
+              <span style="color: blueviolet;"><i class="fa-solid fa-person"></i></span> Adaptability
+            </ul>
           </ul>
           <br><br>
         </div>
@@ -163,29 +205,31 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3" id="achiv-left">
-          <h2>Certifications & Achievements</h2>
+          <h2 data-aos="fade-up" data-aos-duration="1000">
+            Certifications & Achievements
+          </h2>
         </div>
         <div class="col-md-9" id="achiv-right">
           <ul>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Feb 2020 - Certification Black Belt 1st Dan (TBKA)
             </li>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Nov 2022 - Certification in Cybersecurity (CISCO)
             </li>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Jun 2023 - Certification in Data Science (IBM)
             </li>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Aug 2023 - Domain Head(ACC, Christ University)
             </li>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Aug 2023 - Club Head(ASCII, Christ University)
             </li>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Feb 2024 - Webmaster(IEEE VTS, Christ University)
             </li>
-            <li>
+            <li data-aos="fade-up" data-aos-duration="1000">
               Jul 2024 - Certification for attending (Recorded) Webinar on
               Artificial Intelligence and Health Care (Sanford University School
               of Medicine)
