--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Welcome to my personal portfolio! I'm Alphy Jose, a passionate Software Engineer dedicated to crafting immersive digital experiences. With a focus on web development, I blend creativity and technical expertise to bring ideas to life. Explore my portfolio...">
 
     <title>Alphy Jose</title>
-    <link rel="icon" href="Images/alphycircle.png">
+    <link rel="icon" href="images/alphycircle.png">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
