--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
           <h2 data-aos="flip-left" data-aos-duration="3000">
             Alphy Jose
           </h2>
-          <h1>Here!</h1>
+          <h1 data-aos="flip-left" data-aos-duration="3000">
+            Here!
+          </h1>
           <ul data-aos="fade-up" data-aos-duration="3000">
             <a href="https://www.linkedin.com/in/alphyjose777/">
               <li>
@@ -239,6 +241,8 @@
       </div>
     </div>
   </section>
+  <!-- achievements ends here -->
+
   <section id="contact">    
     <form action="" id="submit-form">
         <div class="form-container" data-aos="fade-up" data-aos-duration="10">
@@ -260,6 +264,55 @@
       Submitted Successfully!
     </div>
   </section>
+  <!-- contact ends here -->
+
+  <footer>
+    <hr>
+    <div class="container">
+      <div class="row sty-gri" style="color: #fefefe;">
+        <div class="rights col-6 col-lg-3">
+          <h5 class="mt-2">
+            Phone Me
+          </h5>
+          <br>
+          <p><i class="fa-solid fa-phone"></i> 9744036696</p>
+          <p><i class="fa-brands fa-whatsapp"></i> 9744036696</p>
+        </div>
+        <div class=" rights col-6 col-lg-3">
+          <h5 class="mt-2">
+            Mail Me
+          </h5>
+          <br>
+          <p>
+            <i class='fa-solid fa-envelope'></i> alphyjose012@gmail.com
+          </p>
+        </div>
+        <div class="fttr rights col-6 col-lg-3">
+          <h5 class="mt-2">
+            Follow Me
+          </h5>
+          <br>
+          <ul>
+            <a href="https://www.linkedin.com/in/alphyjose777/">
+              <li>
+                <i class="fa-brands fa-linkedin"></i>
+              </li>
+            </a>
+            <a href="https://www.instagram.com/_alp_hy_/">
+              <li>
+                <i class="fa-brands fa-square-instagram"></i>
+              </li>
+            </a>
+          </ul>
+        </div>
+        <div class="rights col-6 col-lg-3">
+          <p>
+            &copy; <span id="displayDateYear"></span> by Alphy Jose <br>All Rights Reserved
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
   
   <!--Javascript Begins Here-->
   <script src="https://kit.fontawesome.com/6d286a1171.js" crossorigin="anonymous"></script>
