--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       <div class="row w-100 position-absolute gx-0 py-0">
         <div class="col-12 text-center welc">
           <h2 data-aos="flip-left" data-aos-duration="3000">
-            Alphy Jose
+            </>
           </h2>
           <h1 data-aos="flip-left" data-aos-duration="3000">
-            Here!
+            </>
           </h1>
           <ul data-aos="fade-up" data-aos-duration="3000">
             <a href="https://www.linkedin.com/in/alphyjose777/">
@@ -77,7 +77,7 @@
                 <i class="fa-brands fa-github"></i>
               </li>
             </a>
-            <a href="https://www.instagram.com/_alp_hy_/">
+            <a href="https://www.instagram.com/jos.alphy/">
               <li>
                 <i class="fa-brands fa-square-instagram"></i>
               </li>
