Download button added

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
             <li class="nav-item">
               <a class="nav-link nav-text-color" href="#achiv_url">Achievements</a>
             </li>
-            <!-- <li class="nav-item">
+            <li class="nav-item">
               <a class="nav-link nav-text-color" href="#exp_url">Experiances</a>
-            </li> -->
+            </li>
             <li class="nav-item">
               <a class="nav-link nav-text-color" href="#contact">Contact Me</a>
             </li>
@@ -76,6 +76,11 @@
             </a>
           </li>
         </ul>
+      </div>
+      <div data-aos="fade-up" data-aos-duration="3000" class="download-btn">
+        <a href="docs/AlphyJose_Resume.pdf" download="AlphyJose_Resume.pdf" onclick="alert('Resume Downloaded.')">
+          <i class="fa-solid fa-download"></i>
+        </a>
       </div>
     </div>
   </section>
@@ -139,7 +144,7 @@
   <!-- Education ends here -->
 
   <!--Skills begins here-->
-  <div id="skills_url"></div> <!--don't remove did for better flow -->
+  <div id="skills_url"></div> <!--don't remove did for better flow --> <br>
   <section id="skills">
     <div class="container">
       <h1 data-aos="fade-up" data-aos-duration="1000">
@@ -239,38 +244,48 @@
   <!-- Achievements ends here -->
   
   <!-- Experiances section here -->
-   <!--div id="exp_url"></div> <!--don't remove did for better flow --> <br><br><br>
-  <!-- <section id="exp">
+  <div id="exp_url"></div> <!--don't remove did for better flow --> <br><br><br>
+  <section id="exp">
     <div class="containder">
       <h1 data-aos="fade-up" data-aos-duration="1000">
         Experiances
       </h1>
       <div class="row">
         <div class="col-6" id="edu-left">
-          <div class="edu-1" data-aos="fade-up" data-aos-duration="1000">
-            <h4>2019</h4>
-            <h4>High School Education</h4>
-            <h6>Holy Cross Higher Secondary School</h6>
-            <h6>Score: 97%</h6>
+          <div class="edu-1" data-aos="fade-left" data-aos-duration="2525">
+            <h4>2023</h4>
+            <h4><i style="color: blueviolet;" class="fab fa-python"></i> Python Development Intern</h4>
+            <h5>HDLC Technologies Private Limited</h5>
+            <h6>Duration: May 2023 to June 2023</h6>
+            <h6>Python, Streamlit, Tkinter</h6>
           </div>
-          <div class="edu-3" data-aos="fade-up" data-aos-duration="1000">
-            <h4>2025</h4>
-            <h4>College Education</h4>
-            <h6>Christ (Deemed To Be University),Kengeri Campus</h6>
-            <h6>CGPA: 7.65/10</h6>
+          <div class="edu-3" data-aos="fade-left" data-aos-duration="2525">
+            <h4>2024</h4>
+            <h4><i style="color: blueviolet;" class="fa-solid fa-laptop-code"></i> Web Development Intern</h4>
+            <h5>Octanet Services Private Limited</h5>
+            <h6>Duration: May 2024 to May 2024</h6>
+            <h6>HTML5, CSS, JavaScript, Bootstrap, Canva</h6>
           </div>
         </div>
         <div class="col-6" id="edu-right">
-          <div class="edu-2" data-aos="fade-up" data-aos-duration="1000">
-            <h4>2021</h4>
-            <h4>Higher Secondary Education</h4>
-          <h6>Holy Cross Higher Secondary School</h6>
-          <h6>Score: 92%</h6>
+          <div class="edu-2" data-aos="fade-right" data-aos-duration="2525">
+            <h4>2024</h4>
+            <h4><i style="color: blueviolet;" class="fa-solid fa-display"></i> Freelance Web Developer/ Designer</h4>
+            <h5>Indbritz Consultancy -  Australia</h5>
+            <h6>Duration: April 2024 to May 2024</h6>
+            <h6>HTML5, CSS, JavaScript, Canva, Bootstrap, Firebase</h6>
+          </div>
+          <div class="edu-2" data-aos="fade-right" data-aos-duration="2525">
+            <h4>2025</h4>
+            <h4><i style="color: blueviolet;" class="fa-solid fa-briefcase"></i> Apprentice Trainee</h4>
+            <h5>Indian Institute of Information Technology Kottayam</h5>
+            <h6>Ongoing</h6>
+            <!-- <h6>HTML5, CSS, JavaScript, Canva, Bootstrap, Firebase</h6> -->
           </div>
         </div>
       </div>
     </div>
-  </section><br><br> -->
+  </section><br><br>
   <!-- experiences section ends here -->
 
   <!--contact session begins here-->
